# pytest-dependency

./: .gitignore  .readthedocs.yaml  .rtd-require  .travis.yml  CHANGES  CHANGES.rst  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  pytest_dependency.py  python-pytest-dependency.spec  requirements.txt  setup.py
.github/: requirements.txt
.github/workflows/: publish-to-pypi.yaml  rst-lint.yaml  run-tests.yaml
doc/: .gitignore  Makefile
doc/examples/: all_params.py  basic.out  debugging-logging.out  debugging-summary.out  debugging-verbose.out  debugging.py  dyn-parametrized.py  group-fixture.py  group-fixture2.py  mark-class.py  named.py  nodeid.out  nodeid.py  or_dependency.py  parametrized.py  runtime.py  scope_class.py  scope_module.py  scope_session_mod_01.py  scope_session_mod_02.py  testclass.py
doc/src/: 08A1264175343E6E.pub  about.rst  advanced.rst  changelog.rst  conf.py  configuration.rst  debugging.rst  index.rst  install.rst  names.rst  reference.rst  (+2 more)
src/: pytest_dependency.py  pytest_dependency_hooks.py
tests/: conftest.py  pytest.ini  test_01_marker.py  test_02_simple_dependency.py  test_03_class.py  test_03_multiple_dependency.py  test_03_param.py  test_03_runtime.py  test_03_scope.py  test_03_skipmsgs.py  test_04_automark.py  test_04_ignore_unknown.py  test_05_alldepend.py  test_05_collect_dependencies.py  test_05_ordering.py  test_05_scope.py  test_06_scope.py  test_09_examples_advanced.py  test_09_examples_debugging.py  test_09_examples_names.py  test_09_examples_scope.py  test_09_examples_usage.py  test_10_accept_xfail.py
